<resources>
    <string name="app_name">CardChain</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="signUp">Sign Up</string>
    <string name="forgotPass">Forgot Password?</string>
    <string name="started">\ Lets Get \n Started</string>
    <string name="email">Email</string>
    <string name="welc_back">\ Welcome Back!</string>
    <string name="welcome">\ Welcome!</string>
    <string name="re_pass">Confirm Password</string>
    <string name="forg_msg">Don\'t worry, we have got you covered!</string>
    <string name="forg_hint">Enter account Email</string>
    <string name="send">Send</string>
    <string name="ok">Okay</string>
    <string name="dial_suc_msg">You\'ve Signed Up!</string>
    <string name="forg_dial">Check your Email !</string>
    <string name="login_preference">preferences</string>
    <string name="logout">Logout</string>
    <string name="add_card">Add New Card</string>
    <string name="card_num">Card Number</string>
    <string name="card_holder">Card Holder Name</string>
    <string name="save">Save</string>
    <string name="scan_card">Scan Card</string>
    <string name="card_name">Card Name</string>
    <string name="profile">Profile</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="edit_profile">Profile</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="ph_no">Phone Number</string>
    <string name="hello">Hello,</string>
    <string name="user">User</string>
    <string name="delete_acc">Delete Account</string>
    <string name="about">About</string>
    <string name="delete_card">Delete Card</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_us_desc">We\'d love to hear feedback from you</string>
    <string name="empty_msg_box">Cannot leave message box empty</string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="begin">Start</string>
    <string name="skip">Skip</string>
    <string name="os_title_1">Welcome to CardChain</string>
    <string name="os_desc_1">CardChain is a central place for you to access all loyalty cards in one place</string>
    <string name="os_title_2">Perfect solution for LaidBacks !!!</string>
    <string name="os_desc_2">No more lost cards, No need to remember, No worry about physical damage, No more bulky wallets</string>
    <string name="os_title_3">Enter to your Loyalty Card World</string>
    <string name="os_desc_3">Create your profile, and add your cards. Its easy as 1–2–3 !</string>
    <string name="delete_acc_msg">Enter Password to Delete Account</string>
    <string name="Confirm">Confirm</string>
    <string name="Cancel">Cancel</string>
    <string name="share_card">Share Card</string>
    <string name="good_evng">Good Evening</string>
    <string name="good_aftrnoon">Good Afternoon</string>
    <string name="good_mrning">Good Morning</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="invalid_cred">You have provided invalid credentials</string>
    <string name="too_many_attempts">Too many failed attempts. Please wait for a few minutes and try again later.</string>
    <string name="connectivity_err">There seems to be a connectivity issue…</string>
    <string name="other_issue">There seems to be an issue… Please try again later</string>
    <string name="email_in_use">Entered email address is already in use…</string>
    <string name="pass_too_weak">Entered password is too weak</string>
    <string name="internet_lost">Internet connection lost…</string>
    <string name="internet_back">Connected to internet…</string>
    <string name="profile_saved">Profile information successfully saved!</string>
    <string name="barcode_saved">Barcode Saved</string>
    <string name="use_clear_img">No Barcode Found, use clearer Image</string>
    <string name="scan_frm_gal">Scan From Gallery</string>
    <string name="card_saved">Card added successfully</string>
    <string name="card_save_err">Card was not added. Please try again later.</string>
    <string name="card_fill_name_and_holder">Please Fill Out Holder Name and Card Name</string>
    <string name="del_car_suc">Deleted Card Successfully!</string>
    <string name="del_car_err">Error occurred while deleting. Please try again later.</string>
    <string name="about_dialog_button">Got it</string>
    <string name="about_dialog_appname">CardChain</string>
    <string name="about_dialog_appversion">Version 1.0</string>
    <string name="about_dialog_thanks">Thanks For Developers</string>
    <string name="about_dialog_dev1">Benjamin Keunen</string>
    <string name="about_dialog_dev2">Fangjian Lei</string>
    <string name="about_dialog_dev3">Matthew Wong</string>
    <string name="about_dialog_dev4">Ni Yang</string>
    <string name="about_dialog_dev5">Sharan Rohit Raj</string>
    <string name="about_dialog_email">Contact Email: cardchain@gmail.com</string>
    <string name="scn_barcode_first">Scan Barcode First</string>
    <string name="card_exists">The Card your trying to save is already saved. Do you still want to save?</string>
    <string name="pass_weak">Password is weak. Add more characters</string>
    <string name="pass_dig">, digits</string>
    <string name="pass_up">, uppercase characters</string>
    <string name="pass_low">, lowercase characters</string>
    <string name="pass_spl">, special characters</string>
    <string name="pass_not_contain">Password doesn\'t contain </string>
    <string name="forg_pass_email_err">Hmm… we don\'t think we have your account…</string>
    <string name="contact_us_note">Note: We only accept Email as the mode of contact. So please choose email when you are shown the options.</string>
</resources>