<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="342dp"
    android:layout_height="280dp"
    app:cardCornerRadius="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <Button
            android:id="@+id/err_ok_btn"
            android:layout_width="91dp"
            android:layout_height="38dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/dialog_btn_shape"
            android:fontFamily="@font/roboto"
            android:text="@string/ok"
            android:textColor="#FFFFFF"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/err_dialog_txt"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/err_ok_btn2"
            android:layout_width="91dp"
            android:layout_height="38dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/dialog_btn_shape"
            android:fontFamily="@font/roboto"
            android:text="@string/Cancel"
            android:textColor="#FFFFFF"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/err_dialog_txt"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="54dp"
            android:layout_height="54dp"
            app:layout_constraintBottom_toTopOf="@+id/err_dialog_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.086"
            app:srcCompat="@drawable/x_mark" />

        <TextView
            android:id="@+id/err_dialog_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:paddingLeft="20dp"
            android:layout_marginTop="10dp"
            android:paddingRight="20dp"
            android:text="@string/invalid_cred"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="#040303"
            android:inputType="textMultiLine"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.421" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>